--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="col-md-4">
                         <div class="header-cont-info">
                             <ul>
-                                <li><i class="fa fa-phone"></i><a href="tel: ‪9748021765‬"> Call Us: ‪9748021765‬</a></li>
+                                <li><i class="fa fa-phone"></i><a href="tel: 9118074085"> Call Us: 9118074085</a></li>
                                 
                             </ul>
                         </div>
